@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Sun Aug 07 01:20:00 CEST 2005
+ * Sun Aug 07 01:30:37 CEST 2005
  *
  *****************************************************************************/
 
@@ -235,7 +235,8 @@ namespace Mono.Cecil.Binary {
 			m_textWriter.Write (hnt.RuntimeLibrary);
 			m_textWriter.Write ('\0');
 
-			// ep + rva
+			m_textWriter.Write (hnt.EntryPoint);
+			m_textWriter.Write (hnt.RVA);
 		}
 
 		public override void Terminate (Image img)
